fix spacing issue with list items that have child elements

--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ h2 {
     border-bottom: 1px solid #AAA;
 }
 
+li > p {
+    margin: 0;
+}
+
 table {
     border-spacing: 0;
     border-collapse: collapse;
